加密保护/SVK-Protector v1.43/Examples/Inc&Lib/special.h

    __XTRN194 DWORD __stdcall SVKP_GetRegistrationInformation (LPSTR reginfoptr);

    __XTRN194 DWORD __stdcall SVKP_LockKeyboard (void);

    __XTRN194 DWORD __stdcall SVKP_UnLockKeyboard (void);

    __XTRN194 DWORD __stdcall SVKP_KillDebugger (void);

    __XTRN194 DWORD __stdcall SVKP_RebootComputer (void);

    __XTRN194 DWORD __stdcall SVKP_GetHWInfo (LPSTR HWInformation);